<resources>
    <string name="app_name">WareHouse</string>

    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">WareHouse</string>
    <string name="nav_scheduling">Scheduling</string>
    <string name="nav_drone_launch">Drone Launch</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>
    <string name="privacy_policy">Privacy Policy</string>


</resources>
