<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@mipmap/ic_drone_red"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_scheduling"
            android:icon="@drawable/drone_one"
            android:title="@string/nav_scheduling" />

        <item
            android:id="@+id/nav_drone_launch"
            android:icon="@drawable/drone_find"
            android:title="@string/nav_drone_launch" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/nav_settings" />
    </group>

    <item android:title="Support">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:title="@string/nav_about_us" />
            <item
                android:id="@+id/nav_privacy_policy"
                android:title="@string/privacy_policy" />
        </menu>
    </item>

</menu>